<resources>
    <string name="app_name">Android Hackathon Project</string>
    <string name="popular">Movies</string>
    <string name="most_popular_movies">Most popular movies</string>
    <string name="error_fetch_movies">Please check your internet connection</string>
    <string name="top_rated">TV Series</string>
    <string name="highest_rated_movies">Most Popular TV Series</string>
    <string name="upcoming">Trending Content</string>
    <string name="stay_updated">Trending Content</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Wishlist</string>
    <string name="title_notifications">Notifications</string>
</resources>
